--- a/index.html
+++ b/index.html
@@ -1,153 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
+    <script src="https://kit.fontawesome.com/36a1546f7c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio</title>
+    <title>Portfolio Rahul</title>
 </head>
+
 <body>
 
-        <nav>
-            <div class="nav-logo">
-                <a href="#">
-                    <img src="images/logo.png.png">
-                </a>
-            </div>
+    <nav>
+        <div class="nav-logo">
+            <a href="https://rnyfarmer.tech/">
+                <img src="images/logo.png.png">
+            </a>
+        </div>
 
-            <ul class="nav-links">
-                <li class="link"><a href="#">Home</a></li>
-                <li class="link"><a href="#">Features</a></li>
-                <li class="link"><a href="#">Pricing</a></li>
-                <li class="link"><a href="#">About</a></li>
-            </ul>
-            <button class="btn">Hire Me</button>
-        </nav>
+        <ul class="nav-links">
+            <li class="link"><a href="#">Home</a></li>
+            <li id="link1" class="link"><a href="#">Certification</a></li>
+            <li id="link2" class="link"><a href="#">Projects</a></li>
+            <li id="link3" class="link"><a href="#">About</a></li>
+        </ul>
+        <button class="btn">Hire Me</button>
+    </nav>
 
-        <header class="container">
-            <div class="content">
-                <span class="blur"></span>
-                <span class="blur"></span>
-                <h4>CREATE YOUR SITE LIKE A PRO</h4>
-                <H1>Hi, I'm <span>Rahul Buriya</span>, Aspiring Full Stack Developer </H1>
+    <header class="container">
+        <div class="content">
+            <span class="blur"></span>
+            <span class="blur"></span>
+            <H1>Hi, I'm <span>Rahul</span>, Aspiring Web Developer</H1>
+            <p>
+                🚀 Aspiring Web Developer 🌐 | 10+ Projects Completed | Greetings! 
+                I'm, a passionate web developer on a journey of continuous learning and innovation. 
+                With a solid foundation in web development, I have successfully delivered over 10+ projects, 
+                showcasing my commitment to quality and creativity.
+                Driven by the desire to pursue my true passion, 
+                Each day is a new opportunity for me to expand my skill set, 
+                exploring the latest technologies and methodologies to stay at t
+                he forefront of the ever-evolving web landscape..
+            </p>
+            <button class="btn">Get Started</button>
+        </div>
+        <div class="image">
+            <img src="images/header.png.png">
+        </div>
+    </header>
+
+    <section class="container">
+        <h2 class="header">Certificate</h2>
+        <div class="features">
+            <div class="card">
+                <span><i class="fa-solid fa-certificate"></i></span>
+                <h4>Apna Collage</h4>
                 <p>
-                    "Welcome to my Full Stack Journey: A Sneak Peek into My Coding Adventures! 🚀💻 Explore a glimpse of my portfolio showcasing the projects I've dived into on this coding odyssey. From front-end finesse to back-end wizardry, this is just a taste of my Full Stack prowess. Take a look around and witness the power of my evolving skills! #FullStackExplorer #CodeAdventures"
+                    I have completed the Full Stack Developer course 
+                    from Apna College in December 2023. 
+                    This shows my passion for web development and 
+                    prepares me for future challenges in software development.
                 </p>
-                <button class="btn">Get Started</button>
+                <a href="#">View<i class="ri-arrow-right-line"></i></a>
             </div>
-            <div class="image">
-                <img src="images/header.png.png">
+            <div class="card">
+                <span><i class="fa-solid fa-certificate"></i></span>
+                <h4>HarvardX CS50W</h4>
+                <p>
+                    I completed the CS50’s Web Programming course from Harvard. 
+                    It taught me web development with Python, JavaScript, SQL, and frameworks. 
+                    I learned and applied skills on database, scalability, security, and user experience. 
+                    I can create and deploy dynamic and interactive web apps.
+                </p>
+                <a href="#">Yoke <i class="ri-arrow-right-line"></i></a>
             </div>
-        </header>
+            <div class="card">
+                <span><i class="fa-solid fa-certificate"></i></span>
+                <h4>Comin Soon...</h4>
+                <p>
+                    Lorem ipsum dolor sit...
+                </p>
+                <a href="#">Pipe-Line <i class="ri-arrow-right-line"></i></a>
+            </div>
+            <div class="card">
+                <span><i class="fa-solid fa-certificate"></i></i></span>
+                <h4>Coming Soon...</h4>
+                <p>
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <a href="#">Pipe-Line <i class="ri-arrow-right-line"></i></a>
+            </div>
+        </div>
+    </section>
 
-        <section class="container">
-            <h2 class="header">"Unleashing Innovation: Join Me in the World of Code!"</h2>
-            <div class="features">
-                <div class="card">
-                    <span><i class="ri-instagram-line"></i>
-                    </span>
-                    <h4>Instagram</h4>
+    <section class="container">
+        <h2 class="header">PROJECTS</h2>
+        <p class="sub-header">
+            Hers is some sample of i created some Clone Websites and Weather Website and some other projects as a part of my learning process.
+        </p>
+        <div class="Projects">
+            <div class="card">
+                <div class="content">
+                    <h4>🍔 Food Order Project</h4>
                     <p>
-                        "Welcome to my digital world! 🌐💻 Join me on a coding expedition as we navigate through the ever-evolving landscape of web development. From crafting sleek designs to mastering the latest tech, I'm here to share tips, tricks, and the artistry behind creating stunning websites. Let's geek out over code and build something extraordinary together! 🖥️✨ #WebDevWizard #CodeLife"
-                        </p>
-                    <a href="#">Yoke <i class="ri-arrow-right-line"></i></a>
-                </div>
-                <div class="card">
-                    <span><i class="ri-github-line"></i>
-                    </span>
-                    <h4>GitHub</h4>
-                    <p>
-                         "Embark on a coding journey with me on GitHub! 🚀💻 Dive into my repositories where lines of code come to life. From innovative projects to collaborative creations, join the coding community and explore the endless possibilities. Let's connect, collaborate, and craft the future of tech together! 🌐🌟 #GitHubExplorer #CodeCollaborator"
+                        Welcome to my showcase of innovation and culinary convenience! In this portfolio,
+                         I proudly present my latest endeavor—a Food Order Website project that seamlessly 
+                         blends technology with the joy of gastronomy.
                     </p>
-                    <a href="#">Yoke <i class="ri-arrow-right-line"></i></a>
                 </div>
-                <div class="card">
-                    <span><i class="ri-mail-send-line"></i>
-                    </span>
-                    <h4>E-mail</h4>
-                    <p>
-                        "Got a coding challenge or an idea you want to discuss? Shoot me an email! 📧 Let's collaborate, brainstorm, or simply chat about all things web development. Whether it's a project proposal or a coding conundrum, I'm here to connect and help bring your digital visions to life. Can't wait to hear from you! 🌐✨ #CodingCollaboration #LetsBuildTogether"
-                    </p>
-                    <a href="#">Yoke <i class="ri-arrow-right-line"></i></a>
-                </div>
-                <div class="card">
-                    <span><i class="ri-folder-open-line"></i>
-                    </span>
-                    <h4>Open Code</h4>
-                    <p>
-                        "Join the open code revolution with me! OpenCode is more than just a platform; it's a community-driven space where innovation thrives. Dive into collaborative coding, contribute your skills, and explore the power of open-source projects. Let's code together, break barriers, and create something remarkable! 🌐💡 #OpenCodeRevolution #CollaborativeCoding"
-                    </p>
-                    <a href="#">Yoke<i class="ri-arrow-right-line"></i></a>
-                </div>
+                <button class="btn">View</button>
             </div>
-        </section>
-
-        <section class="container">
-            <h2 class="header">PROJECT PRICING PLANS</h2>
-            <P class="sub-header">
-                Our pricing plans comes with various membership tiers, each
-                tailored to cater to different projects and 
-                class+ code types.
-            </P>
-            <div class="pricing">
-                <div class="card">
-                    <div class="content">
-                        <h4>Basic Plan</h4>
-                        <h3>0₹</h3>
-                        <p>
-                            <i class="ri-checkbox-circle-line"></i>
-                            Smart Coding Plan
-                        </p>
-                        <p>
-                            <i class="ri-checkbox-circle-line"></i>
-                            At home workouts
-                        </p>
-                    </div>
-                    <button class="btn">Join Now</button>
+            <div class="card">
+                <div class="content">
+                    <h4>🌐 E-Commerce Project</h4>
+                    <p>
+                        Welcome to my digital realm of commerce, where innovation meets consumer needs. 
+                        Within this portfolio, I am thrilled to present my latest achievement—a robust 
+                        E-Commerce project that encapsulates cutting-edge technology and a deep 
+                        understanding of the digital marketplace.
+                    </p>
                 </div>
-                <div class="card">
-                    <div class="content">
-                        <h4>Gold Plan</h4>
-                        <h3>9999.99₹</h3>
-                        <p>
-                            <i class="ri-checkbox-circle-line"></i>
-                            Pro codes
-                        </p>
-                        <p>
-                            <i class="ri-checkbox-circle-line"></i>
-                            At home workouts
-                        </p>
-                    </div>
-                    <button class="btn">Join Now</button>
-                </div>
-                <div class="card">
-                    <div class="content">
-                        <h4>Diamond Plan</h4>
-                        <h3>99999.99₹</h3>
-                        <p>
-                            <i class="ri-checkbox-circle-line"></i>
-                            Elight Classes & Courses
-                        </p>
-                        <p>
-                            <i class="ri-checkbox-circle-line"></i>
-                            Pro codes & Online Chat
-                        </p>
-                        <p>
-                            <i class="ri-checkbox-circle-line"></i>
-                            Personal Coaching
-                        </p>
-                        <p>
-                            <i class="ri-checkbox-circle-line"></i>
-                            At home workouts
-                        </p>
-                    </div>
-                    <button class="btn">Join Now</button>
-                </div>
+                <button class="btn">View</button>
             </div>
-        </section>
+            <div class="card">
+                <div class="content">
+                    <h4>♫ Music Player Project</h4>
+                    <p>
+                        Welcome to the digital symphony of my creative endeavors! Within this portfolio, 
+                        I am delighted to showcase my passion for both technology and music through my 
+                        latest creation—a Music Player project. This project aims to deliver 
+                        not just a functional music playback experience but an immersive journey 
+                        into the world of melodies and rhythm.
+                    </p>
+                </div>
+                <a href="https://github.com/rnyburia/Music-Player" target="_blank"><button class="btn">View</button></a>
+            </div>
+        </div>
+    </section>
 
-     <script src="script.js"></script>
-    
+    <footer class="container">
+        <span class="blur"></span>
+        <span class="blur"></span>
+        <div class="column">
+            <div class="logo">
+                <img src="images/logo.png.png">
+            </div>
+            <p>
+                Created with ❤️ by Rahul Buriya
+            </p>
+            <p>
+                Thanks to Github & dot.tech for domain.
+            </p>
+            <div class="socials">
+                <a href="mailto:hi@rnyfarmer.tech"><i class="ri-mail-line"></i></a>
+                <a href="https://github.com/rnyburia" target="_blank" ><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/rahul-buriya-a98b70188/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
+        </div>
+        <div class="column">
+            <h4>Company</h4>
+            <a href="#">Business</a>
+            <a href="#">Sponsor</a>
+            <a href="#">My Network</a>
+        </div>
+        <div class="column">
+            <h4>About Us</h4>
+            <a href="https://github.com/rnyburia" target="_blank">Blogs</a>
+            <a href="google.com" target="_blank">Channels</a>
+            <a href="https://www.buymeacoffee.com/rnyfarmer" target="_blank">Buy me a coffee</a>
+        </div>
+        <div class="column">
+            <h4>Contact</h4>
+            <a href="#">Contact Us</a>
+            <a href="#">Privicy Policy</a>
+            <a href="#">Terms & Conditions</a>
+        </div>
+    </footer>
+
+    <div class="copyright">
+        Copyright © 2023 Rahul Buriya. All Rights Reserved.
+    </div>
+
+
+    <script src="script.js"></script>
 </body>
+
 </html>
