--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li id="link2" class="link"><a href="#">Projects</a></li>
             <li id="link3" class="link"><a href="#">About</a></li>
         </ul>
-        <button class="btn">Hire Me</button>
+       <button id="link4" class="btn">Hire Me</button>
     </nav>
 
     <header class="container">
