adsens index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="https://kit.fontawesome.com/36a1546f7c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Portfolio Rahul</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2458784333068183"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
